# a2a-conversation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  VISUALIZATION.md  a2a_conversation.py  conversation_graph.mmd  docker-compose.yml  pyproject.toml  test_pii_detection.py
docs/: LANGSMITH_INTEGRATION.md  OBSERVABILITY.md
examples/: test_observability.py  visualize_graph.py
src/a2a_conversation/: __init__.py  dashboard.py  main.py
src/a2a_conversation/agents/: conversation_state.py  conversational_agent.py  pii_monitor_agent.py
src/a2a_conversation/config/: settings.py
src/a2a_conversation/utils/: conversation.py  logging_config.py  observability.py  visualization.py
